// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      onLayout={[Function]}
      style={Object {}}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": "auto",
              "justifyContent": "flex-start",
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "borderTopWidth": 0,
            },
          ]
        }
      >
        <Text
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "color": "#556572",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "fontWeight": "600",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
              undefined,
            ]
          }
        >
          Assign To
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingRight": 16,
              "paddingTop": 14,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#EE0612",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Remove
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "height": "auto",
            "minHeight": 54,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingLeft": 16,
              "paddingRight": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Object {
                  "fontWeight": "600",
                },
              ]
            }
          >
            Assignees
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {},
                ]
              }
            >
              Everyone
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "minHeight": 54,
              "paddingVertical": 8,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "minWidth": 90,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingLeft": 16,
                },
                Object {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "paddingRight": 32,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Due Date
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minWidth": 90,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {},
                  ]
                }
              >
                May 31 11:59 PM
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessibilityLabel="Remove date"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/Clear.png",
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "minHeight": 54,
              "paddingVertical": 8,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "minWidth": 90,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingLeft": 16,
                },
                Object {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "paddingRight": 32,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Available From
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minWidth": 90,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {},
                  ]
                }
              >
                Mar 17 12:00 AM
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessibilityLabel="Remove date"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/Clear.png",
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "minHeight": 54,
              "paddingVertical": 8,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "minWidth": 90,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingLeft": 16,
                },
                Object {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "paddingRight": 32,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Available Until
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minWidth": 90,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {},
                  ]
                }
              >
                May 31 11:59 PM
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessibilityLabel="Remove date"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/Clear.png",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View />
    <View />
    <View />
  </View>
  <View
    style={
      Object {
        "height": 24,
      }
    }
  />
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "borderTopColor": "#C7CDD1",
          "borderTopWidth": 0.5,
          "height": "auto",
          "minHeight": 54,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
            "paddingRight": 16,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/Add.png",
            }
          }
          style={
            Array [
              Object {
                "height": 18,
                "marginRight": 8,
                "width": 18,
              },
              Object {
                "tintColor": "#008EE2",
              },
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#008EE2",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "#008EE2",
                },
              ],
            ]
          }
        >
          Add Due Date
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
        }
      }
    />
  </View>
</View>
`;

exports[`render correctly with overide 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View>
    <View
      onLayout={[Function]}
      style={Object {}}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": "auto",
              "justifyContent": "flex-start",
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "borderTopWidth": 0,
            },
          ]
        }
      >
        <Text
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "color": "#556572",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "fontWeight": "600",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
              undefined,
            ]
          }
        >
          Assign To
        </Text>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "paddingRight": 16,
              "paddingTop": 14,
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "color": "#EE0612",
                      "fontSize": 14,
                      "fontWeight": "500",
                    },
                  ]
                }
              >
                Remove
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "#C7CDD1",
            "borderBottomWidth": 0.5,
            "height": "auto",
            "minHeight": 54,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingLeft": 16,
              "paddingRight": 16,
            }
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Object {
                  "fontWeight": "600",
                },
              ]
            }
          >
            Assignees
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": "Lato-Regular",
                    "fontSize": 16,
                  },
                  Object {},
                ]
              }
            >
              due
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "minHeight": 54,
              "paddingVertical": 8,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "minWidth": 90,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingLeft": 16,
                },
                Object {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "paddingRight": 32,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Due Date
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minWidth": 90,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {},
                  ]
                }
              >
                May 31 11:59 PM
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessibilityLabel="Remove date"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/Clear.png",
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "minHeight": 54,
              "paddingVertical": 8,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "minWidth": 90,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingLeft": 16,
                },
                Object {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "paddingRight": 32,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Available From
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minWidth": 90,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {},
                  ]
                }
              >
                Mar 17 12:00 AM
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessibilityLabel="Remove date"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/Clear.png",
                }
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#FFFFFF",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "minHeight": 54,
              "paddingVertical": 8,
            },
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "flex-end",
              "minWidth": 90,
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingLeft": 16,
                },
                Object {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "paddingRight": 32,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {
                      "fontWeight": "600",
                    },
                  ]
                }
              >
                Available Until
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "minWidth": 90,
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2D3B45",
                      "fontFamily": "Lato-Regular",
                      "fontSize": 16,
                    },
                    Object {},
                  ]
                }
              >
                May 31 11:59 PM
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 8,
              "paddingLeft": 8,
              "paddingRight": 16,
              "paddingTop": 8,
            }
          }
        >
          <View
            accessibilityLabel="Remove date"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/Clear.png",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View />
    <View />
    <View />
  </View>
  <View
    style={
      Object {
        "height": 24,
      }
    }
  />
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderBottomColor": "#C7CDD1",
          "borderBottomWidth": 0.5,
          "borderTopColor": "#C7CDD1",
          "borderTopWidth": 0.5,
          "height": "auto",
          "minHeight": 54,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#FFFFFF",
            "flex": 1,
            "flexDirection": "row",
            "paddingLeft": 16,
            "paddingRight": 16,
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/Add.png",
            }
          }
          style={
            Array [
              Object {
                "height": 18,
                "marginRight": 8,
                "width": 18,
              },
              Object {
                "tintColor": "#008EE2",
              },
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "#2D3B45",
                "fontFamily": "Lato-Regular",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#008EE2",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
                Object {
                  "color": "#008EE2",
                },
              ],
            ]
          }
        >
          Add Due Date
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "height": 24,
        }
      }
    />
  </View>
</View>
`;
